# treexplain

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
docs/: index.html
notebooks/: data_exploration.ipynb
scripts/: setup.sh  train.py
src/: __init__.py  config.py
src/api/: __init__.py  main.py  schemas.py
src/data/: __init__.py  fetcher.py  pipeline.py  preprocessor.py
src/model/: __init__.py  deforestation.py  trainer.py
src/xai/: __init__.py  explainer.py
tests/: __init__.py  test_model.py  test_xai.py
